--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "nanoid": "^3.3.11",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10"
   }
