--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
@@ -26,7 +26,6 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^3.3.11",
     "node-fetch": "^2.7.0",
-    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10"
   }
 }
