--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^3.3.11",
+    "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10"
   }
